--- a/src/components/ProjectContainer.css
+++ b/src/components/ProjectContainer.css
@@ -4,6 +4,33 @@
 
 .project-img {
   max-width: 100%;
+  border-radius: 5%;
+}
+
+.project-wrapper {
+  position: relative;
+}
+
+.project-content {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin: 0 1rem 1rem 1rem;
+}
+
+.project-description {
+  color: whitesmoke;
+}
+
+.skill-item {
+  color: whitesmoke;
+  background: rgb(105, 104, 105);
+  padding: 4px 10px;
+  border-radius: 50px;
+  text-transform: capitalize;
+  font-size: 11px;
+  margin-right: 6px;
+  font-weight: 500;
 }
 
 .ext-link-icon {
