--- a/src/components/SectionTitle.css
+++ b/src/components/SectionTitle.css
@@ -1,30 +1,36 @@
+.section-container {
+  padding-bottom: 1rem;
+}
+
 .section-title {
-    position: relative;
+  position: relative;
+  font-size: 2em;
+  font-weight: bold;
 }
 
 .section-title::after {
-    position: absolute;
-    content: "";
-    height: .18rem;
-    left: 0;
-    right: 0;
-    margin: auto;
-    top: 2rem;
-    background-color: purple;
+  position: absolute;
+  content: "";
+  height: 0.18rem;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 2.2rem;
+  background-color: purple;
 }
 
 .skills::after {
-    width: 3rem;
+  width: 3rem;
 }
 
 .projects::after {
-    width: 5rem;
+  width: 5rem;
 }
 
 .contact::after {
-    width: 4.5rem;
+  width: 4.5rem;
 }
 
 .about::after {
-    width: 3.5rem;
+  width: 3.5rem;
 }
