--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -1,5 +1,7 @@
-.skills {
+.skills-main {
   /* height: 100vh; */
+  background-color: #f5f5f5;
+  padding: var(--section-padding);
 }
 
 .skills-chart {
